# docs-sdk-c

./: README.adoc  antora.yml
modules/ROOT/: nav.adoc
modules/ROOT/pages/: async-programming.adoc  atomic-operations.adoc  blocking-and-nonblocking.adoc  bulk-operations.adoc  c-intro.adoc  cli-tools.adoc  client-settings.adoc  collecting-diagnostics.adoc  collecting-information-and-logging.adoc  common-settings.adoc  common-usage.adoc  compatibility-versions-features.adoc  concurrent-mutations-cluster.adoc  core-operations.adoc  datastructures.adoc  deleting.adoc  document-operations.adoc  documents.adoc  download-install.adoc  download-list.adoc  durability.adoc  encrypting-using-sdk.adoc  external-eventloop.adoc  failure-considerations.adoc  full-text-searching-with-sdk.adoc  get-involved.adoc  getting-started.adoc  handling-error-conditions.adoc  handling-errors.adoc  logging.adoc  managing-clusters.adoc  managing-connections.adoc  n1ql-queries-with-sdk.adoc  n1ql-queries.adoc  n1ql-query.adoc  options.adoc  overview.adoc  preempting-errors.adoc  release-notes.adoc  relnotes-c-sdk.adoc  (+22 more)
modules/ROOT/partials/: attributes.adoc
modules/concept-docs/pages/: analytics-for-sdk-users.adoc  buckets-and-clusters.adoc  collections.adoc  compression.adoc  concepts.adoc  data-model.adoc  document-operations.adoc  documents.adoc  durability-replication-failure-considerations.adoc  encryption.adoc  errors.adoc  n1ql-query.adoc  nonjson.adoc  response-time-observability.adoc  understanding-views.adoc  xattr.adoc
modules/devguide/examples/: .gitignore  CMakeLists.txt  README.md
modules/devguide/examples/c/: .clang-format  bulk-get.cc  bulk-store.cc  cas.cc  client-settings.cc  connecting-cert-auth.cc  connecting-ssl.cc  connecting.cc  counter.cc  create-remove-bucket.cc  durability.cc  expiration.cc  fts-basic.cc  management-bucket-create.cc  management-bucket-drop.cc  management-bucket-flush.cc  n1ql-create-primary-index.cc  pessimistic-lock.cc  query-atplus.cc  query-consistency.cc  query-create-index.cc  query-criteria.cc  query-placeholders.cc  retrieving.cc  subdoc-retrieving.cc  subdoc-updating.cc  updating.cc
modules/devguide/examples/c/bincoding/: README.md  avatar.h  base64.c  base64.h  bincoding.c  cJSON.c  cJSON.h
modules/devguide/examples/c/encryption/: common_provider.c  common_provider.h  openssl_asymmetric_decrypt.c  openssl_asymmetric_encrypt.c  openssl_asymmetric_provider.c  openssl_asymmetric_provider.h  openssl_symmetric_decrypt.c  openssl_symmetric_encrypt.c  openssl_symmetric_provider.c  openssl_symmetric_provider.h
modules/devguide/examples/cmake/: FindCOUCHBASE.cmake  StandardProjectSettings.cmake
modules/hello-world/pages/: .#start-using-sdk.adoc  cbc.adoc  overview.adoc  sample-application.adoc  start-using-sdk.adoc  start-using-sdk1.adoc
modules/hello-world/partials/: alpha-warning.adoc  attributes.adoc  installation.adoc
modules/howtos/examples/: CMakeLists.txt  README.md  analytics.c  analytics.cc  array-append-prepend.cc  atomic-counters.c  atomic-counters.cc  bulk-get.cc  cJSON.c  cJSON.h  cas.c  cas.cc  client-settings.cc  create-remove-bucket.cc  durability.c  durability.cc  expiration.c  expiration.cc  fts-basic.cc  insert-upsert.c  insert-upsert.cc  ping.cc  query-consistency.cc  query-criteria.cc  query-placeholders.cc  querycriteria.cc  subdoc-retrieving.cc  subdoc-updating.cc  subdoc-xattrs.c  transactions-example.cxx  views.c  views.cc
modules/howtos/pages/: analytics-using-sdk.adoc  collecting-information-and-logging.adoc  concurrent-async-apis.adoc  concurrent-document-mutations.adoc  distributed-acid-transactions-from-the-sdk.adoc  durability-error-handling-from-the-sdk.adoc  encrypting-using-sdk.adoc  error-handling.adoc  full-text-searching-with-sdk.adoc  health-check.adoc  kv-operations.adoc  managing-connections.adoc  n1ql-queries-with-sdk.adoc  observability-metrics.adoc  observability-orphan-logger.adoc  observability-tracing.adoc  provisioning-cluster-resources.adoc  sdk-authentication.adoc  sdk-user-management-example.adoc  slow-operations-logging.adoc  subdocument-operations.adoc  transcoders-nonjson.adoc  troubleshooting-cloud-connections.adoc  view-queries-with-sdk.adoc  working-with-collections.adoc
modules/howtos/partials/: attributes.adoc
modules/project-docs/pages/: 3.0-pre-release-notes.adoc  compatibility.adoc  distributed-transactions-cxx-release-notes.adoc  get-involved.adoc  migrating-sdk-code-to-3.n.adoc  sdk-licenses.adoc  sdk-release-notes.adoc
modules/project-docs/partials/: attributes.adoc
modules/ref/pages/: client-settings.adoc  error-codes.adoc  travel-app-data-model.adoc
modules/ref/partials/: attributes.adoc  beta-warning.adoc
